Show related links - add missing url in mapper - add blur background in detail screen

--- a/character-feature/src/main/res/values/strings.xml
+++ b/character-feature/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="series">SERIES</string>
     <string name="stories">STORIES</string>
     <string name="events">EVENTS</string>
+    <string name="related_links">Related links</string>
 </resources>
